--- a/HiPlot_student.ipynb
+++ b/HiPlot_student.ipynb
@@ -176,8 +176,37 @@
         "colab": {}
       },
       "source": [
-        "\n",
+        "import hiplot as hip\n",
         "hip.Experiment.from_iterable(parameters_list).display()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "t1iLvzn4hCSL",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Zadania\n",
+        "\n",
+        "Tutaj najważniejsze to pobawić się różnymi parametrami i zobaczyć jak wpływają na funkcję straty. Najlepiej spóbować:\n",
+        "\n",
+        "* dodać zmienną liczbę neuronów w warstwie pośrednieć\n",
+        "* dodać różne funkcje aktywacji\n",
+        "* zmienić dane wyjściowe na trudniejsze (np. copy-paste z pliku pytorch3)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_T8V6k9Ghnw-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
